Fix extra padding on URL warning

--- a/client/component/redirect-edit/style.scss
+++ b/client/component/redirect-edit/style.scss
@@ -69,6 +69,10 @@
 		a:hover {
 			text-decoration: underline;
 		}
+
+		p {
+			margin: 0;
+		}
 	}
 }
 
